# OpenGL-Madness

GLFW_Tut/: test.cpp
Rectangle/: .clangd  CMakeLists.txt  rectangle.cpp
Rectangle/shaders/: CMakeLists.txt  fragment_shader.glsl  shaders.cpp  shaders.h  vertex_shader.glsl
Triangle/: CMakeLists.txt  test.cpp
